# macro-main

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  LICENSE  MANIFEST.in  NOTICE  README.md  To_Jose.ipynb  andrea_check.py  canada_disagg.pkl  change_table.py  check_province_gdp.py  check_table.py  configuration.yaml  debug.md  debug.py  environment.yml  fc_substitution.md  firms_substitution.md  flatten_synthetic_docs.sh  fra_data.pkl  growth_simulation.py  indexing.md  internal_documentation.md  luke_quantiles.py  macromodel-model-run-provincial_disagg.ipynb  mkdocs.yml  no_growth_simulation.csv  obps.md  plan.md  pr.md  province_level.md  pyproject.toml  rent_fix.md  requirements-dev.txt  requirements.txt  run_style.sh  sectoral_dissag_CAN_2014.csv  setup.py  test_was_standalone.py
.cursor/rules/: documentation.mdc
.github/workflows/: build_macrocalib.yaml  build_macrodata.yml  build_macromodel.yml  docs.yml  gcp-docs.yml  style_check.yml
calibration_example/: calibration_process.md  create_pkl.py  create_samples.py  train_model.py
check_accounting/: check_icio.py
debugging_experiments/: reproduce_reetik.py
docs/: CNAME  index.md  requirements.txt  was_integration.md
docs/_static/: custom_css.css
docs/api/: agent.md
docs/contributing/: development.md  macro_data.md  macromodel.md  project_structure.md  style_guide.md  testing.md
docs/examples/: basic_usage.md
docs/getting_started/: installation.md  quickstart.md
docs/macro_data/: contributing.md  country.md  index.md  region.md
docs/macrocalib/: index.md
docs/macromodel/: index.md
examples/: was_integration_example.py
jump_analysis/: configuration.yaml  create_pkl.py  create_samples.py  data.pkl  gdp_decomposition.py  jumptest.py  reproduce_jump.py
latest/: 404.html  index.html  objects.inv
latest/api/: agent.html  index.html
latest/contributing/: development.html  macro_data.html  macromodel.html  project_structure.html  style_guide.html  testing.html
latest/examples/: basic_usage.html
latest/getting_started/: installation.html  quickstart.html
latest/macro_data/: contributing.html  country.html  index.html  region.html
latest/macrocalib/: index.html
latest/macromodel/: index.html
latest/search/: search_index.json
macro-data/: .gitignore  README.md  copy  default.yaml  pyproject.toml  requirements.txt  setup.py
macro-data/data/: creator.py
macro-data/inet_data/: __init__.py  creator.py  data_wrapper.py  run_creator.py  runner.py
macro-data/macro_data/: __init__.py  configuration_utils.py  data_wrapper.py
macro-model/: .gitignore  README.md  requirements.txt  setup.py
macro-model/inet_macromodel/: __init__.py  runner.py  simulation.py  timeseries.py
macro-model/macromodel/: simulation.py  timeseries.py  timestep.py
macro-model/model/: runner.py  timeseries.py
macro_data/: __init__.py  configuration_utils.py  data_wrapper.py  default_country_conf.yaml
macro_data/configuration/: __init__.py  countries.py  country_names.yaml  dataconfiguration.py  process_config.py  region.py
macro_data/processing/: synthetic_country.py
macro_data/readers/: default_readers.py  exogenous_data.py  icio_sea_matching.py  readers-README.md
macro_data/util/: clean_data.py  create_code.py  imputation.py  partition.py  regressions.py
macrocalib/: README.md
macrocalib/sampler/: __init__.py  sampler.py
macrocalib/training/: train.py
macromodel/: simulation.py  timeseries.py  timestep.py
macromodel/agents/: __init__.py
macromodel/banks/: __init__.py  banks.py
macromodel/central_bank/: central_bank.py
macromodel/central_government/: __init__.py  central_government.py
macromodel/configurations/: __init__.py  bank_configuration.py  central_bank_configuration.py  country_configuration.py  credit_market_configuration.py  exchange_rates_configuration.py  firms_configuration.py  government_entities_configuration.py  households_configuration.py  housing_market_configuration.py  labour_market_configuration.py
macromodel/country/: __init__.py  country.py  regional_aggregator.py
macromodel/credit_market/: credit_market.py
macromodel/debug/: README.md  __init__.py  tfp_labor_logger.py
macromodel/economy/: __init__.py  economy.py  economy_ts.py
macromodel/exchange_rates/: __init__.py  exchange_rates.py
macromodel/exogenous/: exogenous.py  exogenous_ts.py
macromodel/firms/: firm_ts.py  firms.py
my_runs/: data.pkl  generate_configuration.py  labour_country_conf.yaml  labour_small_samples.npy  run_comp_bis.py  run_competition.py  run_pickle.py
spoof_data/: README.md  compare_original_vs_spoofed.py  compustat_exploration_results.json  explore_compustat_data.py  explore_hfcs_data.py  generate_spoofed_compustat.py  generate_spoofed_hfcs.py  hfcs_exploration.md  hfcs_exploration_results.json  spoof_hfcs.py  validate_compustat_coherence.py  validate_hfcs_coherence.py
tests/: test_was_integration.py
(+1070 files in other folders)
