[build-system]
requires = ["setuptools>=68.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macromodel"
version = "1.0.0"
description = "Combined macro-data and macro-model packages for agent-based modeling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py~=3.9.0",
    "matplotlib~=3.7.2",
    "numba~=0.59.0",
    "numpy~=1.26.4",
    "pandas~=2.2.0",
    "pyarrow~=15.0.2",
    "pydantic~=2.6.0",
    "pyyaml~=6.0.1",
    "scikit-learn~=1.3.0",
    "scipy~=1.11.2",
    "setuptools~=68.2.0",
    "skops~=0.8.0",
    "statsmodels~=0.14.1",
    "tables~=3.9.2",
    "tqdm~=4.66.1",
    "strenum~=0.4.15",
    "cvxpy~=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=7.4.2",
    "pytest-cov~=4.1.0",
    "black==24.10.0",
    "black[jupyter]",
    "isort",
]
docs = [
    "mkdocs==1.6.1",
    "notebook==7.2.2",
    "mike==2.1.3",
    "mkdocs-autorefs==1.2.0",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-material==9.5.46",
    "mkdocs-material-extensions==1.3.1",
    "mkdocstrings==0.27.0",
    "mkdocstrings-python==1.12.2",
    "mkdocs-jupyter==0.25.1",
    "mistune==3.0.2",
    "nbconvert==7.14.0",
]

[tool.setuptools]
packages = ["macro_data", "macromodel"]
include-package-data = true
package-data = {"" = ["*.yaml"]}

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_first_party = ["macro_data", "macromodel"]