[build-system]
requires = ["setuptools>=68.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macromodel"
version = "1.0.0"
description = "Combined macro-data and macro-model packages for agent-based modeling"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py",
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "pyarrow",
    "pydantic",
    "pyyaml",
    "scikit-learn",
    "scipy",
    "setuptools",
    "skops",
    "statsmodels",
    "tables",
    "tqdm",
    "strenum",
    "cvxpy",
    "torch",
    "joblib",
    "sbi",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "black[jupyter]",
    "isort",
]
docs = [
    "mkdocs",
    "notebook",
    "mike",
    "mkdocs-autorefs",
    "mkdocs-get-deps",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-jupyter",
    "mistune",
    "nbconvert",
]

[tool.setuptools]
include-package-data = true
package-data = {"*" = ["*.yaml"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["macro_data*", "macromodel*", "macrocalib*"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_first_party = ["macro_data", "macromodel"]
